// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alarm 1`] = `
<div
  class="Alarmstyles__Box-sc-1k22vn9-0 jlXDJL"
/>
`;

exports[`Alarm w/ any props 1`] = `
<div
  class="Alarmstyles__Box-sc-1k22vn9-0 jlXDJL className"
  id="alarm"
  title="title"
/>
`;

exports[`Alarm w/ design 1`] = `
Array [
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 HfwfI"
  />,
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 dpCONz"
  />,
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 eBikTp"
  />,
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 hvWWms"
  />,
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 jlXDJL"
  />,
  <div
    class="Alarmstyles__Box-sc-1k22vn9-0 cyKRRz"
  />,
]
`;

exports[`Alarm w/ position: absolute 1`] = `
<div
  class="Alarmstyles__Box-sc-1k22vn9-0 FgHtH"
/>
`;

exports[`Alarm w/ position: relative 1`] = `
<div
  class="Alarmstyles__Box-sc-1k22vn9-0 jlXDJL"
/>
`;
